<resources>
    <string name="app_name">BlindBike</string>
    <string name="login">Login(Email address)</string>
    <string name="password">Password</string>
    <string name="first_name">FirstName</string>
    <string name="last_name">LastName</string>
    <string name="routeName">Route Name</string>
    <string name="startLatitude">Start Latitude</string>
    <string name="startLongitude">Start Longitude</string>
    <string name="endLatitude">End Latitude</string>
    <string name="endLongitude">End Longitude</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
